Actualiza el proyecto con nuevas funciones

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,8 @@ import "../styles/index.css";
         </defs>
       </svg>
       <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
-        <h2 class="text-3xl font-semibold tracking-tight text-balance text-white sm:text-4xl st-style1">¡Hola! Soy <p style="color: #F2B544;">Frank!</p></h2>
+        <h2 class="typing-effect-1 text-3xl font-semibold tracking-tight text-balance text-white sm:text-4xl st-style1">¡Hola! Soy </h2>
+        <p class="typing-effect-2 text-3xl font-semibold tracking-tight text-balance text-white sm:text-4xl st-style1" style="color: #F2B544;">Frank!</p>
         <p class="mt-6 text-lg/8 text-pretty text-gray-300">Desarrollador web apasionado por crear experiencias modernas con HTML, CSS, JavaScript y Bootstrap.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
           <a href="/proyectos" class="rounded-md bg-gray-700 px-3.5 py-2.5 text-sm font-semibold text-white inset-ring inset-ring-white/5 hover:bg-gray-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Ver proyectos </a>
@@ -43,12 +44,12 @@ import "../styles/index.css";
       <div class="lg:pt-4 lg:pr-8">
         <div class="lg:max-w-lg">
           <h2 class="text-base/7 font-semibold text-indigo-400">SOBRE MI</h2>
-          <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty text-white sm:text-5xl">¡Hola! Soy Frank</p>
+          <p class=" animate-glitch mt-2 text-4xl font-semibold tracking-tight text-pretty text-white sm:text-5xl animate-bounce">¡Hola! Soy Frank</p>
           <p class="mt-6 text-lg/8 text-gray-300">Soy diseñador visual con un fuerte enfoque en el branding digital. El diseño visual busca atraer, inspirar, crear deseos y motivar a las personas a responder a los mensajes, con el objetivo de generar un impacto positivo.</p>
           <dl class="mt-10 max-w-xl space-y-8 text-base/7 text-gray-400 lg:max-w-none"></dl>
             <div class="relative pl-9 text-left ">
               <dt class="inline font-semibold text-white">
-                <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="absolute top-1 left-1 size-5 text-indigo-400">
+                <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="absolute top-1 left-1 size-5 text-indigo-400 ">
                   <path d="M5.5 17a4.5 4.5 0 0 1-1.44-8.765 4.5 4.5 0 0 1 8.302-3.046 3.5 3.5 0 0 1 4.504 4.272A4 4 0 0 1 15 17H5.5Zm3.75-2.75a.75.75 0 0 0 1.5 0V9.66l1.95 2.1a.75.75 0 1 0 1.1-1.02l-3.25-3.5a.75.75 0 0 0-1.1 0l-3.25 3.5a.75.75 0 1 0 1.1 1.02l1.95-2.1v4.59Z" clip-rule="evenodd" fill-rule="evenodd" />
                 </svg>
                 Construir identidades visuales coherentes y memorables,
@@ -81,11 +82,11 @@ import "../styles/index.css";
   </div>
 </div>
 <!-- Informacion (Bootstrap) -->
-<div class="text-gray-300">
-  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+<div class="text-gray-300 ">
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8 ">
       <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty text-white sm:text-5xl">Portafolios</p>
 
-      <div class="pt-10 pb-10">
+      <div class="pt-10 pb-10 text-white px-6 py-3 rounded-lg transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
         <img src="img/about.jpg" alt="Front of men&#039;s Basic Tee in black." class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80" />
         <div class="mt-4 flex justify-between text-gray-300" >
           <div class="text-left">
@@ -99,8 +100,8 @@ import "../styles/index.css";
       </div>
 
 
-    <div class=" mx-auto mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8">
-      <div class="group relative">
+    <div class=" mx-auto mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8 ">
+      <div class="group relative transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
         <img src="img/img1.png" alt="Front of men&#039;s Basic Tee in black." class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80" />
         <div class="mt-4 flex justify-between text-gray-300" >
           <div class="text-left">
@@ -112,7 +113,7 @@ import "../styles/index.css";
           </div>
         </div>
       </div>
-      <div class="group relative">
+      <div class="group relative transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
         <img src="img/img2.png" alt="Front of men&#039;s Basic Tee in black." class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80" />
         <div class="mt-4 flex justify-between text-gray-300" >
           <div class="text-left">
@@ -124,7 +125,7 @@ import "../styles/index.css";
           </div>
         </div>
       </div>
-      <div class="group relative">
+      <div class="group relative transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
         <img src="img/img4.png" alt="Front of men&#039;s Basic Tee in black." class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80" />
         <div class="mt-4 flex justify-between text-gray-300" >
           <div class="text-left">
@@ -141,8 +142,8 @@ import "../styles/index.css";
 
     </div>
  
-    <div class="flex justify-end pt-10 pb-10">
-        <a href="/proyectos" class=" flex  gap-x-5 p-3 pl-10 pr-10 text-sm/6 font-semibold text-white hover:bg-indigo-400  rounded-md bg-indigo-500">
+    <div class="flex justify-end pt-10 pb-10 ">
+        <a href="/proyectos" class=" flex  gap-x-5 p-3 pl-10 pr-10 text-sm/6 font-semibold text-white hover:bg-indigo-400  rounded-md bg-indigo-500 px-6 py-3 transform transition-transform duration-300 hover:translate-y-[-5px] hover:scale-110">
               <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 flex-none text-gray-500">
                 <path d="M2 10a8 8 0 1 1 16 0 8 8 0 0 1-16 0Zm6.39-2.908a.75.75 0 0 1 .766.027l3.5 2.25a.75.75 0 0 1 0 1.262l-3.5 2.25A.75.75 0 0 1 8 12.25v-4.5a.75.75 0 0 1 .39-.658Z" clip-rule="evenodd" fill-rule="evenodd" />
               </svg>
@@ -306,26 +307,26 @@ import "../styles/index.css";
 <div class="py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-      <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-        <div class="mx-auto">
+      <div class="mx-auto flex max-w-xs flex-col gap-y-4 transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
+        <div class="mx-auto ">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-person " viewBox="0 0 16 16">
             <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
             <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5z"/>
           </svg>
         </div>
-        <dd class="text-3xl font-semibold tracking-tight text-white sm:text-4xl">35 Clientes satisfechos</dd>
+        <dd class="text-3xl font-semibold tracking-tight text-white sm:text-4xl">15 Clientes satisfechos</dd>
         <dt class="text-base/7 text-gray-400">Personas y empresas que confiaron en mis servicios.</dt>
         </div>
-      <div class="mx-auto flex max-w-xs flex-col gap-y-4">
+      <div class="mx-auto flex max-w-xs flex-col gap-y-4 transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
         <div class="mx-auto">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-sort-up-alt" viewBox="0 0 16 16">
             <path d="M3.5 13.5a.5.5 0 0 1-1 0V4.707L1.354 5.854a.5.5 0 1 1-.708-.708l2-1.999.007-.007a.5.5 0 0 1 .7.006l2 2a.5.5 0 1 1-.707.708L3.5 4.707zm4-9.5a.5.5 0 0 1 0-1h1a.5.5 0 0 1 0 1zm0 3a.5.5 0 0 1 0-1h3a.5.5 0 0 1 0 1zm0 3a.5.5 0 0 1 0-1h5a.5.5 0 0 1 0 1zM7 12.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7a.5.5 0 0 0-.5.5"/>
           </svg>
         </div>
-        <dd class="text-3xl font-semibold tracking-tight text-white sm:text-4xl">50 Proyectos completados</dd>
+        <dd class="text-3xl font-semibold tracking-tight text-white sm:text-4xl">10 Proyectos completados</dd>
         <dt class="text-base/7 text-gray-400">Trabajos entregados con éxito en distintas áreas de diseño y desarrollo.</dt>     
       </div>
-      <div class="mx-auto flex max-w-xs flex-col gap-y-4">
+      <div class="mx-auto flex max-w-xs flex-col gap-y-4 transform transition-all duration-700 hover:-translate-y-2 hover:scale-105">
         <div class="mx-auto">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
             <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"/>
