--- a/src/pages/experiencia.astro
+++ b/src/pages/experiencia.astro
@@ -16,7 +16,7 @@ const description = "Perfil, experiencia y propósito profesional.";
 
     <div class="mx-auto max-w-2xl mb-20">
       <h2 class="text-center text-base/7 font-semibold text-indigo-400">Resume</h2>
-      <p class="mx-auto mt-2 max-w-lg text-center text-4xl font-semibold tracking-tight text-balance text-white sm:text-5xl">Experiencia</p>
+      <p class="mx-auto mt-2 max-w-lg text-center text-4xl font-semibold tracking-tight text-balance text-white sm:text-5xl  animate-pulse  rounded-md transition-all duration-300 hover:bg-white hover:text-gray-800 hover:shadow-[0_0_15px_#fff]">Experiencia</p>
     </div> 
     </div>
     <div aria-hidden="true" class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]">
@@ -29,15 +29,15 @@ const description = "Perfil, experiencia y propósito profesional.";
   <div class="mx-auto   max-w-7xl py- sm:px-6 sm:py-5 lg:px-8">
 
     <div class="mx-auto max-w-2xl lg:mx-0">
-      <h2 class="text-2xl font-semibold tracking-tight text-pretty text-white sm:text-4xl">Experiencia Profesional</h2>
+      <h2 class="text-2xl font-semibold tracking-tight text-pretty text-white sm:text-4xl animate-pulse">Experiencia Profesional</h2>
       <p class="mt-2 text-lg/8 text-gray-300">"Mi experiencia como Soporte Técnico, Diseño visual y desarrollo funcional. He creado aplicaciones modernas, sitios web interactivos."</p>
     </div>
 
 <div class="relative isolate overflow-hidden bg-gray-900 py-5 sm:py-5 lg:py-20">
 <ul role="list" class="divide-y divide-white/5">
   
-  <li class="flex justify-between gap-x-6 py-5">
-    <div class="flex min-w-0 gap-x-4">
+  <li class="flex justify-between gap-x-6 py-5 transform transition-all duration-700 hover:-translate-y-2 hover:scale-100">
+    <div class="flex min-w-0 gap-x-4 ">
               <div class="flex size-11 flex-none items-center justify-center rounded-lg bg-gray-700/50 group-hover:bg-gray-700">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-gray-400 group-hover:text-white">
                   <path d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z" stroke-linecap="round" stroke-linejoin="round" />
@@ -72,7 +72,7 @@ const description = "Perfil, experiencia y propósito profesional.";
     </div>
   </li>
 
-  <li class="flex justify-between gap-x-6 py-5">
+  <li class="flex justify-between gap-x-6 py-5 transform transition-all duration-700 hover:-translate-y-2 hover:scale-100">
     <div class="flex min-w-0 gap-x-4">
               <div class="flex size-11 flex-none items-center justify-center rounded-lg bg-gray-700/50 group-hover:bg-gray-700">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-gray-400 group-hover:text-white">
@@ -114,7 +114,7 @@ const description = "Perfil, experiencia y propósito profesional.";
     </div>
   </li>
 
-  <li class="flex justify-between gap-x-6 py-5">
+  <li class="flex justify-between gap-x-6 py-5 transform transition-all duration-700 hover:-translate-y-2 hover:scale-100">
     <div class="flex min-w-0 gap-x-4">
               <div class="flex size-11 flex-none items-center justify-center rounded-lg bg-gray-700/50 group-hover:bg-gray-700">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-gray-400 group-hover:text-white">
@@ -144,7 +144,7 @@ const description = "Perfil, experiencia y propósito profesional.";
     </div>
   </li>
 
-  <li class="flex justify-between gap-x-6 py-5">
+  <li class="flex justify-between gap-x-6 py-5 transform transition-all duration-700 hover:-translate-y-2 hover:scale-100">
     <div class="flex min-w-0 gap-x-4">
               <div class="flex size-11 flex-none items-center justify-center rounded-lg bg-gray-700/50 group-hover:bg-gray-700">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-gray-400 group-hover:text-white">
