--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -95,3 +95,34 @@ section{
  .card-body>h5,svg{
      color: #F2B544;
  }
+
+ @keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink {
+  50% { border-color: transparent }
+}
+
+.typing-effect-1 {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid white; /* cursor */
+  animation: typing 2s steps(30, end), blink 0.7s step-end infinite;
+}
+ @keyframes typing {
+  from { width: 0 }
+  to { width: 50% }
+}
+
+@keyframes blink {
+  50% { border-color: transparent }
+}
+
+.typing-effect-2 {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid white; /* cursor */
+  animation: typing 3s steps(30, end), blink 0.7s step-end infinite;
+}
